--- a/style/promo.css
+++ b/style/promo.css
@@ -26,6 +26,10 @@ h1 {
     row-gap: 10px;
 }
 
+.promo .image {
+    margin: 30px 0;
+}
+
 
 /* если используем max-width то пишем брекпоинты снизу основного кода,
 тогда браузер правильно читает таблицу стилей и основные стили не перебивают брекпоинты*/
@@ -42,5 +46,9 @@ h1 {
     
     .partners {
         grid-template-columns: repeat(3, 1fr);
+    }
+
+    .promo .image {
+        margin: 0;
     }
 }
