--- a/scss/banner.scss
+++ b/scss/banner.scss
@@ -1,12 +1,24 @@
 .banner {
     position: relative;
+    height: 80vh;
+    background-image: url("/image/BG-banner.jpg");
+    background-size: cover;
+    background-position: top center;
 
     &__title {
         position: absolute;
-        font-size: 1em;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        max-width: 1128px;
+        font-size: 32px;
         line-height: 1;
         text-align: center;
         letter-spacing: 4.08px;
-        color: #ede5dc;
+        color: #EDE5DC;
+        @media (min-width: 768px) {
+            font-size: 102px;
+        }
     }
 }
