--- a/scss/banner.scss
+++ b/scss/banner.scss
@@ -1,7 +1,7 @@
 .banner {
     position: relative;
     height: 80vh;
-    background-image: url("/image/BG-banner.jpg");
+    background-image: url("../image/BG-banner.jpg");
     background-size: cover;
     background-position: top center;
 
