--- a/scss/steps.scss
+++ b/scss/steps.scss
@@ -1,11 +1,20 @@
 .steps {
-    padding: 80px 0 75px;
+    position: relative;
     background: #cad4bd;
+
+    .fragment {
+        position: absolute;
+        top: -15px;
+        width: 100%;
+        height: 48px;
+        object-fit: cover;
+    }
 
     &__carts {
         display: flex;
         flex-direction: column;
         gap: 80px;
+        padding: 80px 0 75px;
         @media (min-width: 768px) {
             flex-direction: row;
         }
@@ -25,11 +34,16 @@
     &__title {
         font-size: 26px;
         line-height: 1.2;
+        font-size: 26px;
+        letter-spacing: 1.08px;
+        color: #374f4c;
+        padding-bottom: 27px;
     }
 
     &__text {
         font-size: 14px;
         line-height: 1.4;
+        color: #3e3e42;
     }
 
     &__link {
@@ -38,5 +52,9 @@
         padding: 10px 20px;
         margin-top: 5px;
         border: 1px solid #f8f9fa;
+        font-size: 14px;
+        line-height: 1.6;
+        color: #3e3e42;
+        text-decoration: none;
     }
 }
